--- a/about.html
+++ b/about.html
@@ -39,17 +39,17 @@
 	</nav>
 	</header>
 		<h1>About Us</h1>
-		<img src="images/cat_back.JPG" alt="cat on back" width="350" />
+		<img class="about"src="images/cat_back.JPG" alt="cat on back" width="350" />
 	</header>
 	<section>
 	<h4>
-		<p>
+		
 		Our orginization is comitted to delivering the absolute best of adorable, precious, and cute cats every month. Our founders started our orginization during the great COVID outbreak of 2020. During this time they wanted to bring some light to this dark and dreary world by showing off some very adorable cats. You can help the website by buying or cute cat calendars or if you don't feel like buying a calendar you can <a href="donate.html">donate</a> to our partnered orginization the Animal Rescue League of Iowa.
-		</p>
+		
 	</h4>
 	</section>
 	<footer>
-		Copyright: &copy; 2020 by The Cute Kitten Orginization
+		Copyright: &copy; 2020 by The Cute Kitten Organization
 	</footer>
 </body>
 </html>
