--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
 	</nav>
 	</header>
 	<section>
-		<h1 style="text-align:center;font-size: 50px; font-family: Helvetica, Verdana, serif;">The Cute Kitten Organization</h1>
-		<h2 style="text-align:center;font-size: 45px;font-family: Courier, Helvetica, serif;">Cute Cats of The Month</h2>
+		<h1 style="text-align:center;font-size: 50px; font-style: italic; ">The Cute Kitten Organization</h1>
+		<h2 style="text-align:center;font-size: 45px;font-family: Avenir, Helvetica, sans-serif;">Cute Cats of The Month</h2>
 	</section>
-	<img src="images/holding-cats.png" alt="Girl holding cats" width = "350">
-	<img src="images/gray-cat-kiss.jpeg" alt="Girl kissing cat" width = "400">
-	<img src="images/apple.jpg" alt="Small gray cat" width = "350">
+	<div class="center">
+	<img src="images/holding-cats.png" alt="Girl holding cats" width = "32%">
+	<img src="images/gray-cat-kiss.jpeg" alt="Girl kissing cat" width = "32%">
+	<img src="images/apple.jpg" alt="Small gray cat" width = "32%">
+</div>
 
 	<footer>
+		<br>
 		Copyright: &copy; 2020 by The Cute Kitten Organization
 	</footer>
 </body>
