--- a/info.html
+++ b/info.html
@@ -42,10 +42,14 @@
 	</nav>
 	</header>
 			<h1> Meet Our Cats! &#9829;</h1>
-			<h2> Gandalf the Gray </h2>
 		 </header>
 
-			<img src="images/gray-cat-on-couch.jpg" alt="Gray Cat" width="550">
+		 <div class="news">
+		 	<br /><br /><br /><br />
+
+			<img src="images/gray-cat-on-couch.jpg" alt="Gray Cat" width="500">
+		</div>
+			<h2> Gandalf the Gray </h2>
 
 		 <p> 
 		 	Named for his beautiful coat, Gandalf the Gray is the sweetest boy ever. In the morning if he knows you're awake, he pokes your face with his fluffy paws until you get up. Gandalf never hisses or scratches; he is a pacifist through and through. His gorgeous gray coat is so fluffy and soft to the touch. He will follow you around everywhere and demand you give him a belly rub! Could he really be a dog in disguise?
@@ -54,6 +58,7 @@
 		 <table>
 			  <tr>
 			    <th> Cat Features </th>
+			    <th></th>
 			  </tr>
 			  <td>Breed</td>
 			  <td>Domestic Shorthair</td>
@@ -72,13 +77,14 @@
 			    <td>Gray</td>
 			  </tr>
 		</table>
-		<p> 
-
-		</p>
+		<br>
 		
-		<h2> Luna </h2>
 
-		<img src="images/brown-cat-curled.jpg" alt="Brown tabby cat" width="350">
+		<div class="news">
+			<br /><br /><br /><br /><br /><br />
+		<img class="info"src="images/brown-cat-curled.jpg" alt="Brown tabby cat" width="350">
+	</div>
+		<h2> Luna </h2>
 
 		<p> Luna is a very special cat. She is adventurous, independent, and intelligent. She adores the outside, and loves nose kisses! While Luna is a sweet girl, she can also be defiant, especially when she is told "no." Altogether, she is a total sweetheart!
 		</p>
@@ -86,6 +92,7 @@
 		<table>
 			  <tr>
 			    <th> Cat Features </th>
+			    <th></th>
 			  </tr>
 			  <td>Breed</td>
 			  <td>Domestic Shorthair</td>
@@ -104,9 +111,14 @@
 			    <td>Brown Tabby</td>
 			  </tr>
 		</table>
-		<h2> Lukas </h2>
+		<br>
 
-		<img src="images/orange-cat-in-grass.jpg" alt="Orange tabby cat" width="350">
+		<div class="news">
+			<br /><br /><br /><br /><br /><br />
+
+		<img class="info"src="images/orange-cat-in-grass.jpg" alt="Orange tabby cat" width="500">
+	</div>
+		<h2> Lukas </h2>
 
 		<p> Lukas is an incredibly sweet cat. He enjoys waking you up with cuddles as well as exploring the outside world. He loves treats and wet food and will be very vocal when he wants to be fed. Lukas is also a great mouser and would be a nice edition to any home wanting to keep rodents away. He is independent, but loves to receive pets (just as long as he is in the mood).
 		</p>
@@ -114,6 +126,7 @@
 		<table>
 			  <tr>
 			    <th> Cat Features </th>
+			    <th></th>
 			  </tr>
 			  <td>Breed</td>
 			  <td>Domestic Shorthair</td>
@@ -134,7 +147,7 @@
 		</table>
 		 <footer> 
 		 	<h5> For more info contact (xxx) xxx-xxxx </h5>
-		 	<h5> &#169;Copyright Jessica Cousins &#38; Sid Hudson</h5>
+		 	<h5> &#169;Copyright The Cute Kitten Organization</h5>
 		 </footer>
 	</body>
  </html>
