--- a/news.html
+++ b/news.html
@@ -42,41 +42,63 @@
 		</nav>
 		</header>
 			<h1>The Lastest "Mews"</h1>
+			<div class="news">
+			<br /><br /><br />
+			<img src="images/cat-yawn.jpg" alt="Cat yawining" width="350">
+		<h5> Gandalf the Gray getting comfortable in Tiffany's bed</h5>
+	</div>
 			<h2>Silent but Deadly</h2>
 		</header>
 
-		<p> Gandalf the Gray is really proud of how stinky he makes his apartment, but roommates Silvia and Tiffany are not too impressed. "He's a six out of ten," comments Silvia. "Very cute and cuddly, loves attention which I'm here for, but a loss of two points for farting the worst farts I've ever known and another loss of two points for only doing it around me for the majority of the time." Gandalf is no longer allowed in Silvia's room. </p>
 		
-		<img src="images/cat-yawn.jpg" alt="Cat yawining" width="550">
-		<h5> Gandalf the Gray getting comfortable in Tiffany's bed</h5>
-		
-		<p> Tiffany says she is glad that her job gives her easy access to candles and room fragrances to deal with the stench. "He's a very stinky boy," she says. "He brings death upon us." Despite Gandalf's occasional wind breaks, Tiffany still allows him to curl up on her bed and sleep with her. </p>
 
+		<p> Gandalf the Gray is really proud of how stinky he makes his apartment, but roommates Silvia and Tiffany are not too impressed. "He's a six out of ten," comments Silvia. "Very cute and cuddly, loves attention which I'm here for, but a loss of two points for farting the worst farts I've ever known and another loss of two points for only doing it around me for the majority of the time." Gandalf is no longer allowed in Silvia's room. </p>
+
+		<p> Tiffany says she is glad that her job gives her easy access to candles and room fragrances to deal with the stench. "He's a very stinky boy," she says. "He brings death upon us." Despite Gandalf's occasional wind breaks, Tiffany still allows him to curl up on her bed and sleep with her. </p>
+		<br /><br />
+		<div class="news">
+		<br /><br />
+	
+		<img src="images/orange-cat.jpg" alt="Orange and white cat" width="350">
+	</div>
 		<header>
 			<h2> Remembering Yoshi </h2>
 		</header>
+		<br>
+
+	
 
 		<p> Today marks two years since the passing of this beautiful boy. Yoshi was Tiffany Murley's sweetheart that only lived to be one year old. Today, Tiffany remembers how cute and sweet he was. "He was just so cute, I had lots of funny pictures of him," she says. "I turned him into a meme several times."
 		</p>
 
 		<p> Yoshi was a party animal that loved to run around be crazy; however, he equally loved curling up in Tiffany's lap for movie nights and binge watching Netflix. Yoshi passed away in the middle of the night after escaping and being hit by a car. Out of all members of the Murley family, Tiffany was his favorite. </p>
 
+		<br /><br /><br />
 
-		<img src="images/orange-cat.jpg" alt="Orange and white cat" width="350">
+		<div class="news">
+
+		<br /><br /><br />
+		
+
+		<img src="images/cat-and-mouse.jpeg" alt="cat with mouse" width="350">
+
+		<h5> Lukas showing off his latest catch </h5>
+
+	</div>
 
 		<header>
 			<h2> A "Mice" Catch </h2>
 		</header>
 
+
+
 		<p> Lukas is super proud of his latest catch, a small mouse. He made sure to wake up his owner while chasing the mouse around in the early hours of the morning. He and the mouse played a long game of hide and seek before his owner decided to investigate what all the noise Lukas was making was about.
 		</p>
 
-		<img src="images/cat-and-mouse.jpeg" alt="cat with mouse" width="550">
-
-		<h5> Lukas showing off his latest catch </h5>
-
-
 		<p> His owner was surprised to find Lukas had cornered the mouse in a shoe holder. He brought the mouse to the center of the room to give his owner a better look. While his owner displeased to see there was a mouse in her room, she was thankful that Lukas was there to catch it before it could do any damage. </p>
+
+		
+		<br>
 
 
 	</body>
