--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="stylesheet.css">
 </head>
+<br>
 <head>
 	<title>Cute Cats of The Month</title>
 </head>
@@ -36,8 +37,10 @@
 			</li>
 		</ul>
 	</nav>
-		<h1>Cute Cat Merchandise</h1>
 	</header>
+	<body>
+		<h1>Cute Cat Merchandise</h1>
+
 	<p>
 		2020 Cute Kittens Calendar
 		<br /> <img src="images/no_photo_found.png" alt="cat calendar"/>
