--- a/videos.html
+++ b/videos.html
@@ -39,16 +39,23 @@
 				</li>
 			</ul>
 		</nav>
-			<h1> Check Out Our Videos! </h1>
+		<br>
 		</header>
+		<body>
+			<h1>Check Out Our Videos!</h1>
 
+
+
+	<br /><br />
 	<iframe width="600" height="400" src="https://www.youtube.com/embed/rqFTuy84VQg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
     <p> Gandalf loves playing with all types of strings! If you're not careful, he might scratch your hand! </p>
 	</body>
 
+	<br>
+
 		<footer> 
-			<h5> &#169;Copyright Jessica Cousins &#38; Sid Hudson</h5>
+			<h5> &#169;The Cute Kitten Organization</h5>
 
 		</footer>
 
