--- a/about.html
+++ b/about.html
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-<head>
-	<title>
-		About Us
-	</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>About Us</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
+
+  </head>
+
 <body>
-	<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html">Home</a>
-			</li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-			<li>
-				<a href="about.html">About</a>
-			</li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      	<ul class="navbar-nav mr-auto">
 
-			<li>
-				<a href="shop.html">Shop</a>
-			</li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
 
-			<li>
-				<a href="info.html">Info</a>
-			</li>
+          
+          <li class="nav-item active">
+            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+          </li>
 
-			<li>
-				<a href="news.html">News</a>
-			</li>
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
 
-			<li>
-				<a href="videos.html">Videos</a>
-			</li>
-		</ul>
-	</nav>
-	</header>
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Info</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="news.html">News</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">Videos</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
 		<h1>About Us</h1>
-		<img class="about"src="images/cat_back.JPG" alt="cat on back" width="350" />
-	</header>
+		<img class="about" src="images/cat_back.JPG" alt="cat on back" width="350" />
+
 	<section>
 	<h4>
 		
-		Our orginization is comitted to delivering the absolute best of adorable, precious, and cute cats every month. Our founders started our orginization during the great COVID outbreak of 2020. During this time they wanted to bring some light to this dark and dreary world by showing off some very adorable cats. You can help the website by buying or cute cat calendars or if you don't feel like buying a calendar you can <a href="donate.html">donate</a> to our partnered orginization the Animal Rescue League of Iowa.
+		Our organization is comitted to delivering the absolute best of adorable, precious, and cute cats every month. Our founders started our orginization during the great COVID outbreak of 2020. During this time they wanted to bring some light to this dark and dreary world by showing off some very adorable cats. You can help the website by buying or cute cat calendars or if you don't feel like buying a calendar you can <a href="donate.html">donate</a> to our partnered organization the Animal Rescue League of Iowa.
 		
 	</h4>
 	</section>
 	<footer>
 		Copyright: &copy; 2020 by The Cute Kitten Organization
-	</footer>
+	</footer> 
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  
 </body>
 </html>
