--- a/index.html
+++ b/index.html
@@ -1,55 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-
-	<title>The Cute Kitten Organization</title>
+    <title>The Cute Kitten Organization</title>
 
 
-<body>
-	<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html">Home</a>
-			</li>
+    <meta charset="utf-8">
 
-			<li>
-				<a href="about.html">About</a>
-			</li>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-			<li>
-				<a href="shop.html">Shop</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-			<li>
-				<a href="info.html">Info</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
 
-			<li>
-				<a href="news.html">News</a>
-			</li>
 
-			<li>
-				<a href="videos.html">Videos</a>
-			</li>
-		</ul>
-	</nav>
-	</header>
+    <div class="alert alert-info" role="alert">
+    Love animals? <a href="file:///Users/riley.fletcher/Documents/GitHub/cat_website/donate.html" class="alert-link">Donate</a> to our partner organization, the Animal Rescue League of Iowa
+  </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+      	<li class="nav-item">
+          
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Info</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="news.html">News</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">Videos</a>
+          </li>
+        </ul>
+      </div>
+      </nav>
+
+    <div class="container">
+
 	<section>
-		<h1 style="text-align:center;font-size: 50px; font-style: italic; ">The Cute Kitten Organization</h1>
-		<h2 style="text-align:center;font-size: 45px;font-family: Avenir, Helvetica, sans-serif;">Cute Cats of The Month</h2>
+		<h1> The Cute Kitten Organization </h1>
+		<h2> Cute Cats of The Month</h2>
 	</section>
 	<div class="center">
-	<img src="images/holding-cats.png" alt="Girl holding cats" width = "32%">
-	<img src="images/gray-cat-kiss.jpeg" alt="Girl kissing cat" width = "32%">
-	<img src="images/apple.jpg" alt="Small gray cat" width = "32%">
+	<img src="images/holding-cats.png" alt="Girl holding cats" width = "350">
+	<img src="images/gray-cat-kiss.jpeg" alt="Girl kissing cat" width = "350">
+	<img src="images/apple.jpg" alt="Small gray cat" width = "350">
 </div>
 
 	<footer>
 		<br>
 		Copyright: &copy; 2020 by The Cute Kitten Organization
 	</footer>
-</body>
+  </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </html>
