--- a/info.html
+++ b/info.html
@@ -2,50 +2,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-	<head> 
-		<title> 
-			Kitten Info
-		</title>
-	</head>
+    <meta charset="utf-8">
+    <title>Meet Our Cats</title>
 
-	<body> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html">Home</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-			<li>
-				<a href="about.html">About</a>
-			</li>
 
-			<li>
-				<a href="shop.html">Shop</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
 
-			<li>
-				<a href="info.html">Info</a>
-			</li>
+  </head>
 
-			<li>
-				<a href="news.html">News</a>
-			</li>
+<body>
+  	<div class="alert alert-info" role="alert">
+  Unable to adopt? <a href="file:///Users/riley.fletcher/Documents/GitHub/cat_website/donate.html" class="alert-link">Donate</a> to our partner organization, the Animal Rescue League of Iowa
+</div>
 
-			<li>
-				<a href="videos.html">Videos</a>
-			</li>
-		</ul>
-	</nav>
-	</header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      	<ul class="navbar-nav mr-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Info <span class="sr-only">(current)</span></a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="news.html">News</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">Videos</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+
+    <div class="container">
+
 			<h1> Meet Our Cats! &#9829;</h1>
-		 </header>
 
 		 <div class="news">
-		 	<br /><br /><br /><br />
+		 	<br />
 
 			<img src="images/gray-cat-on-couch.jpg" alt="Gray Cat" width="500">
 		</div>
@@ -57,17 +73,21 @@
 		 
 		 <table>
 			  <tr>
-			    <th> Cat Features </th>
+			  	<th> Cat Features </th>
 			    <th></th>
 			  </tr>
-			  <td>Breed</td>
-			  <td>Domestic Shorthair</td>
+			  <tr>
+			  	<td>Breed</td>
+			  	<td>Domestic Shorthair</td>
+			  </tr>
 			  <tr>
 			  	<td>Age</td>
 			  	<td>3 years</td>
-			  <tr>	
+			  </tr>	
+			  <tr>
 			  	<td>Sex</td>
 			  	<td>Male</td>
+			  </tr>
 			  <tr>
 			    <td>Eyes</td>
 			    <td>Green</td>
@@ -81,8 +101,8 @@
 		
 
 		<div class="news">
-			<br /><br /><br /><br /><br /><br />
-		<img class="info"src="images/brown-cat-curled.jpg" alt="Brown tabby cat" width="350">
+			<br />
+		<img class="info" src="images/brown-cat-curled.jpg" alt="Brown tabby cat" width="350">
 	</div>
 		<h2> Luna </h2>
 
@@ -94,14 +114,18 @@
 			    <th> Cat Features </th>
 			    <th></th>
 			  </tr>
-			  <td>Breed</td>
-			  <td>Domestic Shorthair</td>
+			  <tr>
+			  	<td>Breed</td>
+			  	<td>Domestic Shorthair</td>
+			  </tr>
 			  <tr>
 			  	<td>Age</td>
 			  	<td>4 months</td>
+			  </tr>
 			  <tr>	
 			  	<td>Sex</td>
 			  	<td>Female</td>
+			  </tr>
 			  <tr>
 			    <td>Eyes</td>
 			    <td>Gold</td>
@@ -114,9 +138,9 @@
 		<br>
 
 		<div class="news">
-			<br /><br /><br /><br /><br /><br />
+			<br />
 
-		<img class="info"src="images/orange-cat-in-grass.jpg" alt="Orange tabby cat" width="500">
+		<img class="info" src="images/orange-cat-in-grass.jpg" alt="Orange tabby cat" width="500">
 	</div>
 		<h2> Lukas </h2>
 
@@ -128,14 +152,18 @@
 			    <th> Cat Features </th>
 			    <th></th>
 			  </tr>
-			  <td>Breed</td>
-			  <td>Domestic Shorthair</td>
+			  <tr>
+			  	<td>Breed</td>
+			  	<td>Domestic Shorthair</td>
+			  </tr>
 			  <tr>
 			  	<td>Age</td>
 			  	<td>5 years</td>
+			  </tr>
 			  <tr>	
 			  	<td>Sex</td>
 			  	<td>Male</td>
+			  </tr>
 			  <tr>
 			    <td>Eyes</td>
 			    <td>Green</td>
@@ -145,9 +173,19 @@
 			    <td>Orange and White</td>
 			  </tr>
 		</table>
+		<br />
 		 <footer> 
-		 	<h5> For more info contact (xxx) xxx-xxxx </h5>
-		 	<h5> &#169;Copyright The Cute Kitten Organization</h5>
+		 	<h5> For more info contact (515) 618-1177 </h5>
+		 	Copyright: &#169; 2020 by The Cute Kitten Organization
 		 </footer>
-	</body>
- </html>
+    	
+    </div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> 
+
+</body>
+</html>
