--- a/news.html
+++ b/news.html
@@ -1,111 +1,109 @@
-
 <!DOCTYPE html>
-<html lang="en"> 
-<head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-	<head>
-		<title> 
-			News
-		</title>
 
-	</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>News</title>
 
-	<body> 
-		<header> 
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-				<li>
-					<a href="about.html">About</a>
-				</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-				<li>
-					<a href="shop.html">Shop</a>
-				</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
 
-				<li>
-					<a href="info.html">Info</a>
-				</li>
+  </head>
 
-				<li>
-					<a href="news.html">News</a>
-				</li>
+  <body>
 
-				<li>
-					<a href="videos.html">Videos</a>
-				</li>
-			</ul>
-		</nav>
-		</header>
-			<h1>The Lastest "Mews"</h1>
-			<div class="news">
-			<br /><br /><br />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      	<ul class="navbar-nav mr-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Info</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">News <span class="sr-only">(current)</span></a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">Videos</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  
+
+    <div class="container">
+    	<h1>The Lastest "Mews"</h1>
+    	<br />
+    	<h2>Silent but Deadly</h2>
 			<img src="images/cat-yawn.jpg" alt="Cat yawining" width="350">
 		<h5> Gandalf the Gray getting comfortable in Tiffany's bed</h5>
-	</div>
-			<h2>Silent but Deadly</h2>
-		</header>
-
+		<br />
 		
 
 		<p> Gandalf the Gray is really proud of how stinky he makes his apartment, but roommates Silvia and Tiffany are not too impressed. "He's a six out of ten," comments Silvia. "Very cute and cuddly, loves attention which I'm here for, but a loss of two points for farting the worst farts I've ever known and another loss of two points for only doing it around me for the majority of the time." Gandalf is no longer allowed in Silvia's room. </p>
 
 		<p> Tiffany says she is glad that her job gives her easy access to candles and room fragrances to deal with the stench. "He's a very stinky boy," she says. "He brings death upon us." Despite Gandalf's occasional wind breaks, Tiffany still allows him to curl up on her bed and sleep with her. </p>
-		<br /><br />
-		<div class="news">
-		<br /><br />
 	
-		<img src="images/orange-cat.jpg" alt="Orange and white cat" width="350">
-	</div>
+		<br />
+
 		<header>
 			<h2> Remembering Yoshi </h2>
 		</header>
-		<br>
 
-	
+		<img src="images/orange-cat.jpg" alt="Orange and white cat" width="350">
 
 		<p> Today marks two years since the passing of this beautiful boy. Yoshi was Tiffany Murley's sweetheart that only lived to be one year old. Today, Tiffany remembers how cute and sweet he was. "He was just so cute, I had lots of funny pictures of him," she says. "I turned him into a meme several times."
 		</p>
 
 		<p> Yoshi was a party animal that loved to run around be crazy; however, he equally loved curling up in Tiffany's lap for movie nights and binge watching Netflix. Yoshi passed away in the middle of the night after escaping and being hit by a car. Out of all members of the Murley family, Tiffany was his favorite. </p>
 
-		<br /><br /><br />
-
-		<div class="news">
-
-		<br /><br /><br />
-		
-
-		<img src="images/cat-and-mouse.jpeg" alt="cat with mouse" width="350">
-
-		<h5> Lukas showing off his latest catch </h5>
-
-	</div>
+		<br />
 
 		<header>
 			<h2> A "Mice" Catch </h2>
 		</header>
 
+		<img src="images/cat-and-mouse.jpeg" alt="cat with mouse" width="350">
 
+		<h5> Lukas showing off his latest catch </h5>
+
+		<br />
 
 		<p> Lukas is super proud of his latest catch, a small mouse. He made sure to wake up his owner while chasing the mouse around in the early hours of the morning. He and the mouse played a long game of hide and seek before his owner decided to investigate what all the noise Lukas was making was about.
 		</p>
 
 		<p> His owner was surprised to find Lukas had cornered the mouse in a shoe holder. He brought the mouse to the center of the room to give his owner a better look. While his owner displeased to see there was a mouse in her room, she was thankful that Lukas was there to catch it before it could do any damage. </p>
 
-		
-		<br>
-
-
-	</body>
+	<br />
 
 	<footer> 
-		<h5> &#169;Copyright Jessica Cousins &#38; Sid Hudson</h5>
-
+		Copyright: &#169; 2020 by the Cute Kitten Organization
 	</footer>
 
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  </body>
 </html>
