--- a/shop.html
+++ b/shop.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-<br>
-<head>
-	<title>Cute Cats of The Month</title>
-</head>
+    <meta charset="utf-8">
+    <title>Shop</title>
 
-<body>
-	<header>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html">Home</a>
-			</li>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-			<li>
-				<a href="about.html">About</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-			<li>
-				<a href="shop.html">Shop</a>
-			</li>
 
-			<li>
-				<a href="info.html">Info</a>
-			</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
 
-			<li>
-				<a href="news.html">News</a>
-			</li>
+  </head>
 
-			<li>
-				<a href="videos.html">Videos</a>
-			</li>
-		</ul>
-	</nav>
-	</header>
-	<body>
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      	<ul class="navbar-nav mr-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Shop <span class="sr-only">(current)</span></a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Info</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="news.html">News</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="videos.html">Videos</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+
+    <div class="container">
 		<h1>Cute Cat Merchandise</h1>
 
 	<p>
@@ -46,7 +61,25 @@
 		<br /> <img src="images/no_photo_found.png" alt="cat calendar"/>
 		<br />$19.99
 	</p>
+
+<div class="jumbotron">
+  <h1 class="display-4">'Feline' generous?</h1>
+  <p class="lead">Consider donating to our parnter!</p>
+  <hr class="my-4">
+  <p>Without the support of our donors, we would not be able to operate.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="file:///Users/riley.fletcher/Documents/GitHub/cat_website/donate.html" role="button">Donate here</a>
+  </p>
+</div>
+
 	<footer>
 		Copyright: &copy; 2020 by The Cute Kitten Orginization
 	</footer>
+    </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  
 </body>
+
+</html>
