--- a/videos.html
+++ b/videos.html
@@ -1,62 +1,80 @@
 <!DOCTYPE html>
 <html lang="en"> 
+
 <head>
-<link rel="stylesheet" href="stylesheet.css">
-</head>
-	<head>
-		<title> 
-			Videos
-		</title>
+    <meta charset="utf-8">
+    <title>Videos</title>
 
-	</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<body> 
-		<header> 
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-				<li>
-					<a href="about.html">About</a>
-				</li>
 
-				<li>
-					<a href="shop.html">Shop</a>
-				</li>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
 
-				<li>
-					<a href="info.html">Info</a>
-				</li>
+  </head>
 
-				<li>
-					<a href="news.html">News</a>
-				</li>
+  <body>
 
-				<li>
-					<a href="videos.html">Videos</a>
-				</li>
-			</ul>
-		</nav>
-		<br>
-		</header>
-		<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">The Cute Kitten Organization</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      	<ul class="navbar-nav mr-auto">
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="info.html">Info</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="news.html">News</a>
+          </li>
+
+
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Videos <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+
+    <div class="container">
 			<h1>Check Out Our Videos!</h1>
 
-
-
-	<br /><br />
-	<iframe width="600" height="400" src="https://www.youtube.com/embed/rqFTuy84VQg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<br />
+	<iframe width="600" height="400" src="https://www.youtube.com/embed/rqFTuy84VQg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
     <p> Gandalf loves playing with all types of strings! If you're not careful, he might scratch your hand! </p>
-	</body>
 
 	<br>
 
 		<footer> 
-			<h5> &#169;The Cute Kitten Organization</h5>
+			Copyright: &#169; 2020 by The Cute Kitten Organization
 
 		</footer>
+
+    </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  
+
+</body>
 
 </html>
